--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.resources.static-locations=file:src/main/resources/static/
+spring.resources.cache.period=0
