--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.prefix=file:src/main/resources/templates/
-spring.resources.static-locations=file:src/main/resources/static/
+spring.web.resources.static-locations=file:src/main/resources/static/
 spring.resources.cache.period=0
