Altera o sistema de build para usar postcss

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>**/tailwind.css</exclude>
+                </excludes>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -85,73 +94,10 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.maciejwalkowiak.paseq</groupId>
-                <artifactId>paseq-maven-plugin</artifactId>
-                <version>0.1.1</version>
-                <!-- configuration for building the package -->
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <task>
-                                    <exec>
-                                        <directory>src/main/frontend</directory>
-                                        <command>npm install</command>
-                                    </exec>
-                                </task>
-                                <task>
-                                    <exec>
-                                        <directory>src/main/frontend</directory>
-                                        <command>npm run build</command>
-                                    </exec>
-                                </task>
-                            </tasks>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>dev</id>
-                        <!-- configuration for running in dev mode with ./mvnw paseq:exec@dev -->
-                        <configuration>
-                            <tasks>
-                                <!-- first run npm install -->
-                                <task>
-                                    <exec>
-                                        <directory>src/main/frontend</directory>
-                                        <command>npm install</command>
-                                    </exec>
-                                </task>
-                                <!-- then start watch task in the background and output the result to `src/main/resources/static/main.css` -->
-                                <task>
-                                    <async>true</async>
-                                    <exec>
-                                        <directory>src/main/frontend</directory>
-                                        <command>npm run watch -- -o ../resources/static/css/tailwind.css</command>
-                                    </exec>
-                                </task>
-                                <!--
-                                optionally post-processed CSS file can also be generated in `target` directory.
-                                Changes to main.css will trigger live reload without a need to recompile the project in Intellij IDEA
-                                -->
-                                <task>
-                                    <async>true</async>
-                                    <exec>
-                                        <directory>src/main/frontend</directory>
-                                        <command>npm run watch -- -o ${project.build.directory}/classes/static/css/tailwind.css</command>
-                                    </exec>
-                                </task>
-                                <task>
-                                    <goals>spring-boot:run</goals>
-                                </task>
-                            </tasks>
-                        </configuration>
-                    </execution>
-                </executions>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.14.0</version>
             </plugin>
         </plugins>
     </build>
-
 </project>
