--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=password
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+server.error.whitelabel.enabled=false
+
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
