adição do sistema de toast nas paginas que faltavam e adição dosistema de email para aviso de agendamento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=yhwi syaq xyqg qwnf
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
@@ -13,3 +13,10 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 spring.web.resources.static-locations=file:src/main/resources/static/
 spring.resources.cache.period=0
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=SGCOSuporte@gmail.com
+spring.mail.password=yhwisyaqxyqgqwnf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
