Adição do Histórico de paciente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/clinica
 spring.datasource.username=postgres
-spring.datasource.password=rosiel10
+spring.datasource.password=postgres
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
